WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
VERIFIED FIXED
165948
Skia lighter wght variation looks bolder than regular
https://bugs.webkit.org/show_bug.cgi?id=165948
Summary
Skia lighter wght variation looks bolder than regular
Dominik Röttsches (drott)
Reported
2016-12-16 03:16:34 PST
Created
attachment 297310
[details]
WebKit Nightly
r209896
too light regular Skia rendering In WebKit Nightly
r209896
and
https://jsfiddle.net/whLa398b/1/
I get a lighter rendering for the regular variant at 1.0 wght value than at the lighter wght variant at 0.8 value. This was discovered while I was using the modified blog post jsfiddle as an example:
https://jsfiddle.net/0v1wkpmz/
If I am not mistaken, the expected result is: The wght 0.8 instance should look lighter. Fonttools tells me both axes in Skia use 1.0 as their default value, so does the "Regular" named instance.
Attachments
WebKit Nightly r209896 too light regular Skia rendering
(308.74 KB, image/png)
2016-12-16 03:16 PST
,
Dominik Röttsches (drott)
no flags
Details
My unreleased Chrome dev version, for comparison
(299.16 KB, image/png)
2016-12-16 03:17 PST
,
Dominik Röttsches (drott)
no flags
Details
Patch
(11.99 KB, patch)
2016-12-20 10:12 PST
,
Myles C. Maxfield
koivisto
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(11.95 KB, patch)
2016-12-20 10:22 PST
,
Myles C. Maxfield
mmaxfield
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews113 for mac-elcapitan
(1.60 MB, application/zip)
2016-12-20 11:13 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews124 for ios-simulator-wk2
(
deleted
)
2016-12-20 11:25 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(9.42 MB, application/zip)
2016-12-20 11:28 PST
,
Build Bot
no flags
Details
Screenshot Safari r210314 and Chromium ToT
(370.80 KB, image/png)
2017-01-05 07:26 PST
,
Dominik Röttsches (drott)
no flags
Details
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Dominik Röttsches (drott)
Comment 1
2016-12-16 03:17:46 PST
Created
attachment 297311
[details]
My unreleased Chrome dev version, for comparison
Myles C. Maxfield
Comment 2
2016-12-20 08:40:20 PST
Yes, CoreText has a bug where applying the default value of a variation axis via the API causes, in reality, the minimum value of that axis to be applied. I need to work around this in WebKit.
Myles C. Maxfield
Comment 3
2016-12-20 09:44:25 PST
***
Bug 163790
has been marked as a duplicate of this bug. ***
Myles C. Maxfield
Comment 4
2016-12-20 10:12:53 PST
Created
attachment 297531
[details]
Patch
Myles C. Maxfield
Comment 5
2016-12-20 10:20:21 PST
Comment on
attachment 297531
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=297531&action=review
> Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:473 > + // FIXME: Remove when <
rdar://problem/28707822
> is fixed
This is not indented correctly.
Myles C. Maxfield
Comment 6
2016-12-20 10:22:09 PST
Created
attachment 297533
[details]
Patch for committing
Build Bot
Comment 7
2016-12-20 11:13:21 PST
Comment on
attachment 297531
[details]
Patch
Attachment 297531
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2760321
New failing tests: imported/w3c/web-platform-tests/IndexedDB/interfaces.worker.html
Build Bot
Comment 8
2016-12-20 11:13:24 PST
Created
attachment 297537
[details]
Archive of layout-test-results from ews113 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 9
2016-12-20 11:25:29 PST
Comment on
attachment 297533
[details]
Patch for committing
Attachment 297533
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2760351
New failing tests: fast/text/variations/outofbounds.html
Build Bot
Comment 10
2016-12-20 11:25:34 PST
Created
attachment 297539
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 11
2016-12-20 11:28:49 PST
Comment on
attachment 297531
[details]
Patch
Attachment 297531
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2760383
New failing tests: fast/text/variations/outofbounds.html
Build Bot
Comment 12
2016-12-20 11:28:52 PST
Created
attachment 297540
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Myles C. Maxfield
Comment 13
2016-12-20 20:44:58 PST
Committed
r210054
: <
http://trac.webkit.org/changeset/210054
>
Dominik Röttsches (drott)
Comment 14
2016-12-21 07:47:01 PST
Nightly only contained revisions up until
r210021
, I'll check tomorrow.
Myles C. Maxfield
Comment 15
2017-01-03 11:02:55 PST
(In reply to
comment #14
)
> Nightly only contained revisions up until
r210021
, I'll check tomorrow.
Any word?
Dominik Röttsches (drott)
Comment 16
2017-01-05 07:26:38 PST
Created
attachment 298100
[details]
Screenshot Safari
r210314
and Chromium ToT
Dominik Röttsches (drott)
Comment 17
2017-01-05 07:27:01 PST
Looks good to me on
r210314
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug